--- a/src/app/seminar/seminar.component.css
+++ b/src/app/seminar/seminar.component.css
@@ -102,6 +102,7 @@ th div {
 }
 
 .annotation {
+  text-align: left;
   padding-top: 8px;
 }
 
